fix (tiptap): no content hint color on dark mode (#2851)

--- a/packages/web-pkg/src/editor/styles/text-editor.css
+++ b/packages/web-pkg/src/editor/styles/text-editor.css
@@ -33,7 +33,7 @@
 .text-editor-content .ProseMirror p.is-editor-empty:first-child::before {
   content: attr(data-placeholder);
   float: left;
-  color: var(--oc-color-role-outline-variant, rgba(0, 0, 0, 0.4));
+  color: var(--oc-role-outline-variant, rgba(0, 0, 0, 0.4));
   pointer-events: none;
   user-select: none;
   height: 0;
